# IOTA-Payment-SDK

./: .gitmodules  README.md
components/DHT22/: CMakeLists.txt
components/DHT22/DHT22/: DHT22.c
components/iota_c/: CMakeLists.txt
components/iota_c/iota_c/examples/: wallet_get_balance.c
components/qrcodegen/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  cli_wallet.c  cli_wallet.h  lcd.c  lcd.h  led.c  led.h  main.c  myWallet.c  myWallet.h  sensor.c  sensor.h
